Fixed extra margin compact TagInfo componenets (#124)

--- a/frontend/amundsen_application/static/js/components/Tags/TagInfo/styles.scss
+++ b/frontend/amundsen_application/static/js/components/Tags/TagInfo/styles.scss
@@ -24,11 +24,8 @@
     background-color: $gray-lighter;
   }
 
-  .tag-name {
-    margin-right: 8px;
-  }
-
   .tag-count {
     color: $text-medium;
+    margin-left: 8px;
   }
 }
